Add Entity Framework DbContext

--- a/MinimalApiSample/MinimalApiSample.csproj
+++ b/MinimalApiSample/MinimalApiSample.csproj
@@ -7,13 +7,13 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.2" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.2">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="MinimalHelpers.Binding" Version="1.0.6" />
 		<PackageReference Include="MinimalHelpers.Routing" Version="1.0.6" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<Folder Include="DataAccessLayer\" />
 	</ItemGroup>
 
 </Project>
