Add initial migration

--- a/MinimalApiSample/appsettings.Development.json
+++ b/MinimalApiSample/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlConnection": ""
+    "SqlConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=MinimalDB;Integrated Security=True;"
   },
   "Logging": {
     "LogLevel": {
