--- a/MinimalApiSample/MinimalApiSample.csproj
+++ b/MinimalApiSample/MinimalApiSample.csproj
@@ -6,13 +6,13 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="FluentValidation.AspNetCore" Version="10.3.6" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.2" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.2">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="MinimalHelpers.Binding" Version="1.0.6" />
-		<PackageReference Include="MinimalHelpers.Routing" Version="1.0.6" />
+		<PackageReference Include="MiniValidation" Version="0.4.1-pre.20220107.41" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
 	</ItemGroup>
 
