--- a/MinimalApiSample/MinimalApiSample.csproj
+++ b/MinimalApiSample/MinimalApiSample.csproj
@@ -6,13 +6,26 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Compile Remove="Binding\**" />
+	  <Compile Remove="Routing\**" />
+	  <Compile Remove="Validations\**" />
+	  <Content Remove="Binding\**" />
+	  <Content Remove="Routing\**" />
+	  <Content Remove="Validations\**" />
+	  <EmbeddedResource Remove="Binding\**" />
+	  <EmbeddedResource Remove="Routing\**" />
+	  <EmbeddedResource Remove="Validations\**" />
+	  <None Remove="Binding\**" />
+	  <None Remove="Routing\**" />
+	  <None Remove="Validations\**" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.2" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.2">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="MinimalHelpers.Binding" Version="1.0.6" />
-		<PackageReference Include="MinimalHelpers.Routing" Version="1.0.6" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
 	</ItemGroup>
 
