--- a/MinimalApiSample/MinimalApiSample.csproj
+++ b/MinimalApiSample/MinimalApiSample.csproj
@@ -12,6 +12,8 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="MinimalHelpers.Binding" Version="1.0.17" />
+		<PackageReference Include="MinimalHelpers.Routing" Version="1.0.10" />
 		<PackageReference Include="MiniValidation" Version="0.4.1-pre.20220107.41" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
 	</ItemGroup>
