--- a/MinimalApiSample/MinimalApiSample.csproj
+++ b/MinimalApiSample/MinimalApiSample.csproj
@@ -6,16 +6,16 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="FluentValidation.AspNetCore" Version="11.0.3" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.6" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.6">
+		<PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.11" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.11">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="MinimalHelpers.Binding" Version="1.0.17" />
-		<PackageReference Include="MinimalHelpers.Routing" Version="1.0.10" />
-		<PackageReference Include="MiniValidation" Version="0.4.1-pre.20220107.41" />
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
+		<PackageReference Include="MinimalHelpers.Binding" Version="1.0.19" />
+		<PackageReference Include="MinimalHelpers.Routing" Version="1.0.14" />
+		<PackageReference Include="MiniValidation" Version="0.7.0" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
 	</ItemGroup>
 
 </Project>
