--- a/MinimalApiSample/Properties/launchSettings.json
+++ b/MinimalApiSample/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "MinimalSample": {
+    "MinimalApiSample": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
